# finance_lora

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs
frontend/src/components/: chatbot.rs
frontend/styles/: style.css
notebooks/: prototype.ipynb
